--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169080">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187436">Odyssey – Scalable PostgreSQL connection pooler</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:00:55 &nbsp;•&nbsp;
-                                    71 comments &nbsp;•&nbsp;
-                                    184.0 points
+                                    <a class="node" href="https://github.com/yandex/odyssey">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:25:10 &nbsp;•&nbsp;
+                                    37 comments &nbsp;•&nbsp;
+                                    186.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17163363">Curb Cuts</a>
+                                    <a href="https://news.ycombinator.com/item?id=17192639">China overtakes U.S. for healthy lifespan: WHO data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://99percentinvisible.org/episode/curb-cuts/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=GW150914">GW150914</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 17:56:45 &nbsp;•&nbsp;
-                                    55 comments &nbsp;•&nbsp;
-                                    184.0 points
+                                    <a class="node" href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 23:00:34 &nbsp;•&nbsp;
+                                    122 comments &nbsp;•&nbsp;
+                                    185.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 04:40:03.704433</strong>
+            <strong>Last update at 2018-05-31 04:50:03.763793</strong>
         </div>
     </div>
 </div>
