--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:12:57 &nbsp;•&nbsp;
                                     7 comments &nbsp;•&nbsp;
-                                    32.0 points
+                                    33.0 points
                                 </span>
                             </td>
                         </tr>
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 13:23:39 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
-                                    29.0 points
+                                    30.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187547">Culture as a Growth Driver</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189615">A hat that prevents facial recognition</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://stories.algolia.com/culture-as-a-growth-driver-f7df0222c67d">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:44:00 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.kickstarter.com/projects/smallsuccess/dont-let-the-internet-or-companies-steal-your-face">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=smallsuccess">smallsuccess</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 17:25:20 &nbsp;•&nbsp;
+                                    7 comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 04:50:03.763793</strong>
+            <strong>Last update at 2018-05-31 05:00:03.801027</strong>
         </div>
     </div>
 </div>
