--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189615">A hat that prevents facial recognition</a>
+                                    <a href="https://news.ycombinator.com/item?id=17193742">OpenBSD's httpd gets URL rewrite</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.kickstarter.com/projects/smallsuccess/dont-let-the-internet-or-companies-steal-your-face">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=smallsuccess">smallsuccess</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:25:20 &nbsp;•&nbsp;
-                                    7 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://marc.info/?l=openbsd-tech&m=152761257806283&w=2">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-31 03:26:32 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 05:00:03.801027</strong>
+            <strong>Last update at 2018-05-31 05:10:04.841365</strong>
         </div>
     </div>
 </div>
