--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17192639">China overtakes U.S. for healthy lifespan: WHO data</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 23:00:34 &nbsp;•&nbsp;
-                                    126 comments &nbsp;•&nbsp;
-                                    189.0 points
+                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
+                                    32 comments &nbsp;•&nbsp;
+                                    190.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:04:45 &nbsp;•&nbsp;
                                     29 comments &nbsp;•&nbsp;
-                                    184.0 points
+                                    185.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 05:00:03.801027</strong>
+            <strong>Last update at 2018-05-31 05:10:04.841365</strong>
         </div>
     </div>
 </div>
