--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -161,6 +161,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://jobs.lever.co/plangrid?lever-origin=applied&lever-source%5B%5D=HackerNews">PlanGrid (YC W12) Hiring Engineering Managers to Modernize Construction</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17160385">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=tyoung">tyoung</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527312456"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://bitmovin.com/careers/?gh_jid=4033759002">Bitmovin (YC S15) Is Hiring a Head of Demand Generation in San Francisco</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -290,7 +314,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
