--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -507,7 +507,7 @@
                                             href="https://news.ycombinator.com/user?id=Anon1096">Anon1096</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527785281"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    373 points
+                                    374 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.nicolasbize.com/blog/30-years-later-qbasic-is-still-the-best/">30 years later, QBasic is still the best</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-05-31/america-s-teens-are-choosing-youtube-over-facebook">America’s Teens Are Choosing YouTube Over Facebook</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17161955">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17200996">
                                         
-                                            195 comments
+                                            274 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=AlexeyBrin">AlexeyBrin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527342114"
+                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527806880"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    369 points
+                                    371 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527856804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527857403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
