--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -189,7 +189,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17197817">
                                         
-                                            222 comments
+                                            223 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Anon1096">Anon1096</a></strong> &nbsp;•&nbsp;
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://hackertarget.com/tcpdump-examples">Tcpdump Examples</a>
+                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17177955">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            39 comments
+                                            43 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527590950"
+                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    299 points
+                                    300 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527859204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527859804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
