--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527776977"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/sodium-friends/learntocrypto">Learn cryptographic engineering by example</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17183784">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            12 comments
+                                            81 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527638390"
+                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527866403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527867005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
