--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -261,7 +261,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            68 comments
+                                            69 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://research.swtch.com/vgo-accepted">The vgo proposal is accepted. Now what?</a>
+                                    <a href="https://trac.torproject.org/projects/tor/wiki/org/meetings/2018Rome/Notes/FusionProject">Mozilla Project Fusion (Tor Integration into Firefox)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17183101">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205441">
                                         
-                                            135 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527629841"
+                                            href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527862181"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    158 points
+                                    159 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527869404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527870003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
