--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -303,19 +303,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://trac.torproject.org/projects/tor/wiki/org/meetings/2018Rome/Notes/FusionProject">Mozilla Project Fusion (Tor Integration into Firefox)</a>
+                                    <a href="https://trac.torproject.org/projects/tor/wiki/org/meetings/2018Rome/Notes/FusionProject">Mozilla Project Fusion: Tor Integration into Firefox</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17205441">
                                         
-                                            61 comments
+                                            69 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527862181"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    180 points
+                                    185 points
                                 </span>
                             </td>
                         </tr>
@@ -333,13 +333,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17196704">
                                         
-                                            108 comments
+                                            109 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alex_young">alex_young</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527778073"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    179 points
+                                    180 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527871203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527871803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
